[package]
name = "pitch_shifter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sss_fft = "0.1.1"
vst = "0.4.0"
iter_spread = "0.1.0"
num = "0.4.1"
real_time_fir_iir_filters = "0.6.3"
linspace = "0.1.1"
array_math = "0.1.4"

[lib]
name = "pitch_shifter"
crate-type = ["cdylib"]
