[package]
name = "pitch_shifter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vst = "0.4.0"
iter_spread = "0.1.0"
num = "0.4.2"
real_time_fir_iir_filters = "0.6.9"
signal_processing = "0.2.0"
linspace = "0.1.1"
array_math = "0.2.42"
rustfft = "6.2.0"
realfft = "3.3.0"

[lib]
name = "pitch_shifter"
crate-type = ["cdylib"]
